--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>diffy</title>
-    <meta property="page" content="index">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="./dist/main.css">
 </head>
 <body>
